[gd_scene load_steps=5 format=3 uid="uid://bqwaehvp4lmlu"]

[ext_resource type="Script" path="res://Scripts/TowerLifecycle.gd" id="1_8tqvp"]
[ext_resource type="Script" path="res://Scripts/IgnoreTextureSizeSprite.gd" id="2_8tr0v"]
[ext_resource type="Material" uid="uid://b7vry5ry4w7iu" path="res://Shaders/OutlineShader.tres" id="4_pr0y4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1rum"]
size = Vector2(128, 128)

[node name="Tower" type="Area2D"]
script = ExtResource("1_8tqvp")

[node name="TargetingRangeOverlapArea" type="Area2D" parent="."]
position = Vector2(-0.5, 1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e1rum")

[node name="Sprite2d" type="Sprite2D" parent="."]
texture_filter = 5
region_rect = Rect2(0, 0, 64, 64)
script = ExtResource("2_8tr0v")
desired_size = Vector2(128, 128)
highlight_shader = ExtResource("4_pr0y4")

[node name="AudioStreamPlayer2d" type="AudioStreamPlayer2D" parent="."]

[node name="Node2d" type="Node2D" parent="."]
position = Vector2(0, -28)

[node name="Label" type="Label" parent="Node2d"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -13.0
offset_right = 5.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = " "
